--- a/lesson 3/index.html
+++ b/lesson 3/index.html
@@ -14,6 +14,11 @@
       <li>Commit 4</li>
       <li>Commit 5</li>
       <li>Commit 7</li>
+      <li>Commit 2</li>
+      <li>Commit 3</li>
+      <li>Commit 4</li>
+      <li>Commit 5</li>
+      <li>Commit 7</li>
     </ul>
   </body>
 </html>
