Added lesson7 & hw7

--- a/lesson 6/index.html
+++ b/lesson 6/index.html
@@ -13,7 +13,7 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, facilis
         nihil unde aspernatur fuga laudantium.
       </div>
-      <!-- <div class="flex-item">
+      <div class="flex-item">
         2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
         omnis tempore pariatur aut asperiores rem!
       </div>
@@ -22,7 +22,7 @@
         2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
         omnis tempore pariatur aut asperiores rem!
       </div>
-      <div class="flex-item">3 Lorem ipsum dolor sit amet consectetur.</div> -->
+      <div class="flex-item">3 Lorem ipsum dolor sit amet consectetur.</div>
     </div>
   </body>
 </html>
