--- a/hw7/index.html
+++ b/hw7/index.html
@@ -11,22 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <form action="#" class="review-form">
+      <h2 class="review-form__title">Написать отзыв:</h2>
+      <textarea name="" id="" cols="30" rows="5" class="review-form__textarea"></textarea>
+      <h3 class="review-form__name">Ваше имя:</h3>
+      <input type="text" name="firstname" id="" class="review-form__text-input" required />
+      <h3 class="review-form__name">Ваша фамилия:</h3>
+      <input type="text" name="lastname" id="" class="review-form__text-input" required />
+      <h3 class="review-form__name">Электронная почта:</h3>
+      <input type="email" name="email" id="" class="review-form__text-input" required />
+      <div class="review-form__subcribe-box">
+        <input type="checkbox" name="" id="" class="review-form__checkbox" />
+        <p class="review-form__text">Подписаться на обновления</p>
+      </div>
+      <button type="submit" class="review-form__submit-button">Оставить отзыв</button>
+    </form>
     <div class="elements">
-      <form action="#" class="review-form">
-        <h2 class="review-form__title">Написать отзыв:</h2>
-        <textarea name="" id="" cols="30" rows="5" class="review-form__textarea"></textarea>
-        <h3 class="review-form__name">Ваше имя:</h3>
-        <input type="text" name="firstname" id="" class="review-form__text-input" required />
-        <h3 class="review-form__name">Ваша фамилия:</h3>
-        <input type="text" name="lastname" id="" class="review-form__text-input" required />
-        <h3 class="review-form__name">Электронная почта:</h3>
-        <input type="email" name="email" id="" class="review-form__text-input" required />
-        <div class="review-form__subcribe-box">
-          <input type="checkbox" name="" id="" class="review-form__checkbox" />
-          <p class="review-form__text">Подписаться на обновления</p>
-        </div>
-        <button type="submit" class="review-form__submit-button">Оставить отзыв</button>
-      </form>
+      <div class="element"></div>
       <div class="element"></div>
       <div class="element"></div>
       <div class="element"></div>
